# PTOAS

./: CMakeLists.txt  README.md  README_en.md
.codex/skills/ptodsl-tilelib-template-authoring/: SKILL.md
.github/workflows/: build_wheel_mac.yml  ci.yml  ci_sim.yml
docker/: Dockerfile  collect_ptoas_dist.sh  collect_ptoas_dist_mac.sh  create_wheel.sh  test_ptoas_cli.sh  test_wheel_imports.sh
docs/: PTO_IR_manual.md  issue-vpto-print-support.md  no_npu_compile_only_guide_zh.md  print_support_research.md  ptoas-tile-fusion-design.md  vpto-spec.md
docs/coda/: phase1-gemm-residual-c2v-baseline-cn.md  phase1-gemm-residual-c2v-baseline.md  phase2-gemm-residual-rmsnorm-c2v-cn.md
docs/designs/: fixpipe-tpipe-design.md  ptoas-debug-name-hints-design.md  ptoas-memory-consistency-design.md  ptodsl-tilelib-template-selection-design.md
docs/isa/micro-isa/: 01-pipeline-sync.md  10-reduction-ops.md  17-simt.md
include/PTO/IR/: PTOAttrs.td  PTOOps.td  PTOTypeUtils.h  VPTOOps.td
include/PTO/Transforms/: MemoryConsistencyAttrs.h  Passes.h  Passes.td
include/pto-c/Dialect/: PTO.h
lib/Bindings/Python/: PTOModule.cpp
lib/CAPI/Dialect/: PTO.cpp
lib/PTO/IR/: PTO.cpp  PTOTypeUtils.cpp  VPTO.cpp
lib/PTO/Transforms/: CMakeLists.txt  ExpandTileOp.cpp  FoldTileBufIntrinsics.cpp  InferPTOLayout.cpp  InsertTemplateAttributes.cpp  PTOLowerFrontendPipeOpsPass.cpp  PTOMaterializeTileHandles.cpp  PTOMemoryConsistency.cpp  PTOPlanMemory.cpp  PTORemoveIdentityTMov.cpp  PTOResolveReservedBuffersPass.cpp  PTOToEmitC.cpp  PTOViewToMemref.cpp  VPTOCANN900LLVMEmitter.cpp  VPTOLLVMEmitter.cpp  VPTOLLVMEmitterHelper.cpp  VPTOPtrNormalize.cpp
mission/483/: 483_13_rmsnorm_alloc_buffer_simt_context_kernel.py  483_docs.md  483_docs_zh.md
ptodsl/: CMakeLists.txt  README.md
ptodsl/docs/: tilelib-migration-testing.md  tilelib-st-failures.md
ptodsl/docs/developer_guide/: tilelib-debugging-playbook.md  tilelib-template-authoring.md
ptodsl/docs/user_guide/: 01-introduction.md  03-kernel-entry-and-subkernels.md  04-type-system-and-buffer.md  06-scalar-and-pointer-ops.md  07-data-movement-ops.md  08-compute-operations.md  13-simt-micro-ops.md
ptodsl/examples/: dynamic_softmax_launch.py  fa_dn_matmul.py  fa_dn_ptodsl.py  fast_hadamard_launch.py  fast_inverse_dense_launch.py  flash_attention_sketch.py  flash_attention_softmax_launch.py  inverse_block_inversion_launch.py  mixed_backend_kernel_module.py  softmax_dsl.py  tadd_launch.py  tilelang_codegen.py  topk_launch.py
ptodsl/examples/flash_attention/: flash_attention_cv_split.py  flash_attention_vf_fusion.py  gu.py  softmax.py
ptodsl/examples/rms_norm/: rmsnorm_alloc_buffer_simt.py  rmsnorm_alloc_buffer_simt_launch_common.py  rmsnorm_alloc_buffer_simt_manual_launch.py
ptodsl/ptodsl/: _allreduce.py  _builtin_vector.py  _diagnostics.py  _jit.py  _ops.py  _subkernels.py  _surface_values.py  _types.py  pto.py  scalar.py
ptodsl/ptodsl/_runtime/: cache.py  native_build.py  toolchain.py
ptodsl/ptodsl/_tracing/: module_builder.py  session.py
ptodsl/ptodsl/tilelib/: _render_runtime.py  metadata.py
ptodsl/tests/: test_allreduce.py  test_ast_rewrite_example_ir.py  test_docs_as_test.py  test_flash_attention_demo_compile.py  test_jit_compile.py  test_jit_diagnostics.py  test_ptoas_frontend_verify.py  test_rmsnorm_example_compile.py  test_runtime_toolchain.py  test_subkernel_diagnostics.py  test_tilelib_catalog.py  test_tilelib_daemon.py  test_vector_cube_ops.py
python/pto/dialects/: pto.py
scripts/: ptoas_env.sh  sim_dsl.sh
test/: 1-emitc-kernel.cpp  2-vpto-before.ll  3-vpto-after.ll
test/dsl-st/: README.md  __main__.py  common.py  cube_matrix_pipeline.py  gemv_mx_pipeline.py  predicate_pack.py  simt_gm_memory_core.py  vmulscvt.py
test/lit/pto/: async_put_get_emitc.pto  backedge_nested_same_pipe_prune_regression.pto  bias_tile_subview_emitc_pointer_type.pto  cmo_cacheinvalid_single_line_invalid.pto  comm_p2p_emitc.pto  compact_left_blayout_parser_a5.pto  debug_name_hints_cfg_emitc.pto  debug_name_hints_emitc.pto  debug_name_hints_expression_emitc.pto  debug_name_hints_function_name_collision_emitc.pto  debug_name_hints_identifier_collision_emitc.pto  debug_name_hints_multi_result_emitc.pto  debug_name_hints_provenance_emitc.pto  debug_name_hints_textual_cfg_emitc.pto  debug_name_hints_textual_comment_string_emitc.pto  debug_name_hints_textual_emitc.pto  emitc_tile_data_sink_after_tassign.pto  eventid_array_dyn_sync.pto  eventid_array_get_set_get.pto  eventid_array_no_cse.pto  fixpipe_basic_deqf16_nz2nd.pto  fixpipe_frontend_device_spec_a5_gating.pto  fixpipe_frontend_emitc_layout_direct_convert_a5.pto  fixpipe_frontend_emitc_low_precision_scalar_quant_a5.pto  fixpipe_frontend_emitc_nested_quant_block_a5.pto  fixpipe_frontend_emitc_peer_key_different_id_scalar8_a5.pto  fixpipe_frontend_emitc_peer_key_same_id_scalar8_a5.pto  fixpipe_frontend_emitc_qf322b8_scalar_a5.pto  fixpipe_frontend_emitc_qs322bf16_a5.pto  fixpipe_frontend_emitc_quant_reuse_a5.pto  fixpipe_frontend_emitc_scalar_override_a5.pto  fixpipe_frontend_emitc_scalar_remat_a5.pto  fixpipe_frontend_emitc_scalar_vector_quant_a3.pto  fixpipe_frontend_emitc_signed_vector8_quant_a5.pto  fixpipe_frontend_emitc_vector_payload_types_a5.pto  fixpipe_frontend_emitc_vector_quant_a5.pto  fixpipe_frontend_emitc_vector_remat_a5.pto  fixpipe_frontend_no_convert_f32_a5.pto  fixpipe_frontend_no_convert_i32_a5.pto  fixpipe_frontend_parse_surface_invalid.pto  (+103 more)
test/lit/tile_fusion/: fusion_plan_dynamic_shape_negative.pto  fusion_plan_shape_inference_switch.pto  op_fusion_cli_flags.pto  op_fusion_nonfused_control.pto
test/lit/vpto/: arith_select_vpto_llvm.pto  dcci_dsb_vpto_llvm.pto  expand_tile_op_ptodsl_tadd.pto  expand_tile_op_ptodsl_tadd_requires_selection.pto  fold_tile_buf_intrinsics_dead_view_cleanup.pto  memory_consistency_cmo_unsupported.pto  print_scalar_vpto_llvm.pto  (+8 more)
test/python/: memory_consistency_bindings.py  ptodsl_jit_compile.py
test/tilelib-st/: README.md  common.py  run_tilelib_st.py
tools/ptoas/: ObjectEmission.cpp  ObjectEmission.h  driver.cpp  ptoas.cpp  ptoas.h
(+107 files in other folders)
